Move Platform rooms to shared XMTP
